--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohappyeyeballs==2.6.1
+# aiohappyeyeballs==2.6.1 # REMOVIDO ou comentado, a menos que seja essencial e você saiba a fonte
 aiohttp==3.12.15
 aiosignal==1.4.0
 altair==5.5.0
@@ -11,7 +11,7 @@ click==8.2.1
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
-datasets==4.0.0
+datasets # Versão removida para instalar a mais recente compatível
 dill==0.3.8
 filelock==3.19.1
 fonttools==4.59.2
@@ -26,18 +26,18 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 MarkupSafe==3.0.2
-matplotlib==3.10.5
+matplotlib # Versão removida para instalar a mais recente compatível
 multidict==6.6.4
 multiprocess==0.70.16
 narwhals==2.4.0
-numpy==2.3.2
+numpy # Versão removida para instalar a mais recente compatível
 packaging==25.0
-pandas==2.3.2
+pandas # Versão removida para instalar a mais recente compatível
 pillow==11.3.0
 plotly==6.3.0
 propcache==0.3.2
 protobuf==6.32.0
-pyarrow==21.0.0
+pyarrow # Versão removida para instalar a mais recente compatível
 pydeck==0.9.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -58,7 +58,7 @@ tokenizers==0.22.0
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
-transformers==4.56.1
+transformers # Versão removida para instalar a mais recente compatível
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
